Update 'nodejs-tmjayhmj' component image to: quay.io/quay_xjiang/nodejs-tmjayhmj:a8bfb37f0cd7b0965d9820ef78068129f2339fc8@sha256:06d8b4b5eddcb0f145114c1af77e982b58d309bf827f90a705c520db44d2c2f1

--- a/components/nodejs-tmjayhmj/overlays/development/deployment-patch.yaml
+++ b/components/nodejs-tmjayhmj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nodejs-tmjayhmj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/quay_xjiang/nodejs-tmjayhmj:a8bfb37f0cd7b0965d9820ef78068129f2339fc8@sha256:06d8b4b5eddcb0f145114c1af77e982b58d309bf827f90a705c520db44d2c2f1
+          name: container-image
